[package]
name = "imageflow_ex"
version = "0.5.0"
authors = []
edition = "2018"

[lib]
name = "imageflow_ex"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.25.0"
lazy_static = "1.0"
imageflow_core = { git = "https://github.com/imazen/imageflow", tag = "v1.5.8-rc62" }
imageflow_types = { git = "https://github.com/imazen/imageflow", tag = "v1.5.8-rc62" }
